k8s/apps/tekton-operator/tekton-operator/pac/webhook-route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-webhook
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - tekton-webhook.jnobrega.com
  parentRefs:
    - name: external
      namespace: network
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: pipelines-as-code-controller
          port: 8080
---
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: tekton-github-allowlist
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tekton-webhook
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 192.30.252.0/22
            - 185.199.108.0/22
            - 140.82.112.0/20
            - 143.55.64.0/20
